fix bug font awesome icon not showing,default font family assigned

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,5 @@
 *, *::before, *::after {
     box-sizing: border-box;
-    font-family: 'Courier New', Courier, monospace, sans-serif;
-    font-weight: normal;
 }
 html {
     height: 100%;
@@ -17,9 +15,12 @@ body {
     display: flex;
     flex-direction: column;
     flex-basis: 1;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
+.calculator-body * {
+    font-family: 'Courier New', Courier, monospace, sans-serif;
+    font-weight: normal;
+}
 
 .calculator-body {
     display: flex;
@@ -111,19 +112,19 @@ footer {
     100 {background-position: 100% 100%;}
 }
 
-FOOTER, a {
+footer, a {
     text-decoration: none;
     background-image: repeating-linear-gradient(45deg,purple, red, blue, darkgreen);
     background-clip: text;
     color: transparent;
     animation: rainbow 7s ease infinite;
     background-size: 800% 800%;
-    
 }
 
 .fa-github {
     font-size: 24px;
     transition: transform 0.3s ease-in-out;
+    font-style: normal;
 }
 
 
